--- a/QuanLyTiecCuoi/MVVM/View/DatTiec/DatTiecView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DatTiec/DatTiecView.xaml
@@ -34,9 +34,35 @@
 
                     <!-- Input controls -->
                     <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" Margin="0 10">
+                        <StackPanel.Resources>
+                            <Style TargetType="TextBox">
+                                <Setter Property="FontSize" Value="22"/>
+                                <Setter Property="FontFamily" Value="Cambria"/>
+                                <Setter Property="Background" Value="White"/>
+                                <Setter Property="Padding" Value="5,0"/>
+                                <Setter Property="BorderThickness" Value="1"/>
+                                <Setter Property="BorderBrush" Value="#673500"/>
+                                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="TextBox">
+                                            <Border 
+                                                CornerRadius="8" 
+                                                Background="{TemplateBinding Background}" 
+                                                BorderBrush="{TemplateBinding BorderBrush}" 
+                                                BorderThickness="{TemplateBinding BorderThickness}">
+                                                <ScrollViewer x:Name="PART_ContentHost" 
+                                                  Margin="0" 
+                                                  VerticalAlignment="Center"/>
+                                            </Border>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </StackPanel.Resources>
                         <ComboBox
                             x:Name="FilterComboBox"
-                            Width="260" Height="40" 
+                            Width="300" Height="40" 
                             FontSize="20"
                             FontFamily="Cambria"
                             Margin="10"
@@ -49,7 +75,6 @@
                         </ComboBox>
                         <TextBox
                             x:Name="FilterTextBox"
-                            Style="{StaticResource TextBoxStyle1}"
                             Width="350"
                             Margin="10"
                             Text="{Binding TuKhoaTimKiem, UpdateSourceTrigger=PropertyChanged}"
@@ -75,6 +100,7 @@
                         x:Name="MyDataGrid"
                         Background="White"
                         ItemsSource="{Binding DanhSachDatTiec}" 
+                        SelectedItem="{Binding DatTiecDangChon, Mode=TwoWay}"
                         AutoGenerateColumns="False"
                         HorizontalAlignment="Stretch" 
                         Margin="0 10" CanUserAddRows="False" Grid.Row="2"
@@ -122,7 +148,7 @@
                         Margin="0,10,0,0" 
                         Grid.Row="3">
                         <Button Content="Thêm tiệc cưới" Click="Add_Click"  Style="{StaticResource ButtonStyle}" FontSize="20" FontFamily="Cambria"/>
-                        <Button Content="In hóa đơn" Click="InHoaDon_Click" Style="{StaticResource ButtonStyle}" FontSize="20" FontFamily="Cambria"/>
+                        <Button Content="In hóa đơn" Style="{StaticResource ButtonStyle}" FontSize="20" FontFamily="Cambria"   Command="{Binding InHoaDonCommand}" CommandParameter="{Binding SelectedItem, ElementName=MyDataGrid}"/>
                     </StackPanel>
                 </Grid>
             </Border>
