--- a/QuanLyTiecCuoi/MVVM/View/DatTiec/DatTiecView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DatTiec/DatTiecView.xaml
@@ -148,7 +148,7 @@
                         Margin="0,10,0,0" 
                         Grid.Row="3">
                         <Button Content="Thêm tiệc cưới" Click="Add_Click"  Style="{StaticResource ButtonStyle}" FontSize="20" FontFamily="Cambria"/>
-                        <Button Content="In hóa đơn" Style="{StaticResource ButtonStyle}" FontSize="20" FontFamily="Cambria"   Command="{Binding InHoaDonCommand}" CommandParameter="{Binding SelectedItem, ElementName=MyDataGrid}"/>
+                        <Button Content="In hóa đơn" Style="{StaticResource ButtonStyle}" FontSize="20" FontFamily="Cambria" Click="InHoaDon_Click"/>
                     </StackPanel>
                 </Grid>
             </Border>
