--- a/QuanLyTiecCuoi/MVVM/View/Sanh/SanhView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/Sanh/SanhView.xaml
@@ -33,11 +33,9 @@
                             Click="btnCTSanh_Click"/>
                 </Grid>
 
-                <!-- Bộ lọc loại sảnh, ngày, ca -->
+                <!-- Bộ lọc ngày, ca -->
                 <Grid Margin="0,10,0,20" HorizontalAlignment="Stretch" VerticalAlignment="Center">
                     <Grid.ColumnDefinitions>
-                        <!-- Cột cho "Chọn loại sảnh" và Combobox -->
-                        <ColumnDefinition Width="Auto"/>
                         <!-- Cột cho "Chọn ngày" và DatePicker -->
                         <ColumnDefinition Width="Auto"/>
                         <!-- Cột cho "Chọn ca" và ComboBox -->
@@ -46,37 +44,25 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <!-- Chọn Loại Sảnh -->
-                    <StackPanel Orientation="Horizontal" Margin="30,0,0,0" Grid.Column="0" >
-                        <TextBlock Text="Loại Sảnh: " Margin="0,0,5,0" VerticalAlignment="Center" FontSize="20" FontFamily="Cambria"/>
-                        <ComboBox Width="150" Margin="0,0,10,0" FontSize="20" FontFamily="Cambria">
-                            <ComboBoxItem Content="Trưa"/>
-                            <ComboBoxItem Content="Tối"/>
-                        </ComboBox>
+                    <!-- Chọn ngày -->
+                    <StackPanel Orientation="Horizontal" Margin="200,0,0,0" Grid.Column="1" >
+                        <TextBlock Text="Ngày: " Margin="0,0,5,0" VerticalAlignment="Center" FontSize="20" FontFamily="Cambria"/>
+                        <DatePicker SelectedDate="{Binding SelectedDate, Mode=TwoWay}" Width="200" Margin="0,0,10,0" FontSize="20" FontFamily="Cambria"/>
                     </StackPanel>
 
-                    <!-- Chọn ngày -->
-                    <StackPanel Orientation="Horizontal" Margin="50,0,0,0" Grid.Column="1" >
-                        <TextBlock Text="Ngày: " Margin="0,0,5,0" VerticalAlignment="Center" FontSize="20" FontFamily="Cambria"/>
-                        <DatePicker Width="200" Margin="0,0,10,0" FontSize="20" FontFamily="Cambria"/>
-                    </StackPanel>
-                
                     <!-- Chọn ca -->
-                    <StackPanel Orientation="Horizontal" Margin="30,0,0,0" Grid.Column="2" >
-                        <TextBlock Text="Ca làm: " Margin="0,0,5,0" VerticalAlignment="Center" FontSize="20" FontFamily="Cambria"/>
-                        <ComboBox Width="150" Margin="0,0,10,0" FontSize="20" FontFamily="Cambria">
-                            <ComboBoxItem Content="Trưa"/>
-                            <ComboBoxItem Content="Tối"/>
-                        </ComboBox>
+                    <StackPanel Orientation="Horizontal" Margin="50,0,0,0" Grid.Column="2" >
+                        <TextBlock Text="Ca Sảnh: " Margin="0,0,5,0" VerticalAlignment="Center" FontSize="20" FontFamily="Cambria"/>
+                        <ComboBox ItemsSource="{Binding DanhSachCaSanh, Mode=TwoWay}" SelectedItem="{Binding SelectedCaSanh}" 
+                                  DisplayMemberPath="TenCa" Width="150" Margin="0,0,10,0" FontSize="20" FontFamily="Cambria"/>
                     </StackPanel>
-                
+
                     <!-- Hiển thị tổng số Sảnh-->
-                    <StackPanel Orientation="Horizontal" Margin="30,0,0,0" Grid.Column="3" HorizontalAlignment="Right">
-                        <TextBlock Text="Tổng số Sảnh:" Margin="0,0,5,0" FontWeight="Bold" VerticalAlignment="Center" FontSize="20"/>
-                        <TextBlock Text="{Binding SoLuongSanh}" Margin="0,0,0,0" FontWeight="Bold" VerticalAlignment="Center" FontSize="20"/>
+                    <StackPanel Orientation="Horizontal" Margin="30,0,10,0" Grid.Column="3" HorizontalAlignment="Right">
+                        <TextBlock Text="Số Sảnh Trống:" Margin="0,0,5,0" FontWeight="Bold" VerticalAlignment="Center" FontSize="20"/>
+                        <TextBlock Text="{Binding SoLuongSanhTrong}" Margin="0,0,0,0" FontWeight="Bold" VerticalAlignment="Center" FontSize="20"/>
                     </StackPanel>
                 </Grid>
-
 
                 <!-- Danh sách sảnh hiển thị bằng hình ảnh -->
                 <ScrollViewer VerticalScrollBarVisibility="Auto" Height="700" Margin="0">
@@ -90,6 +76,7 @@
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <Border BorderBrush="Gray" BorderThickness="1" CornerRadius="10" 
+                                        MouseLeftButtonUp="SanhItem_MouseLeftButtonUp" Tag="{Binding}"
                                         Margin="10" Background="White">
                                     <Grid Margin="15" >
                                         <!-- Cấu trúc hàng -->
