--- a/QuanLyTiecCuoi/MVVM/View/DatTiec/ThemTiecView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DatTiec/ThemTiecView.xaml
@@ -208,7 +208,8 @@
 
                                         <TextBlock Text="Ngày đãi tiệc" Grid.Column="0" VerticalAlignment="Center"/>
                                         <DatePicker
-                                            SelectedDate="{Binding TiecMoi.NgayDaiTiec, Mode=TwoWay}"
+                                            SelectedDate="{Binding TiecMoi.NgayDaiTiec}"
+                                            SelectedDateFormat="Short"
                                             Grid.Column="1"
                                             Width="400"
                                             Height="40"
