--- a/QuanLyTiecCuoi/MVVM/View/DatTiec/ThemTiecView.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/DatTiec/ThemTiecView.xaml
@@ -47,8 +47,7 @@
                            Margin="10,15,10,0"
                            Style="{StaticResource Header1Style}" />
 
-                        <Button 
-                        Command="{Binding LuuCommand}"
+                        <Button
                         Click="LuuTiec"
                         Content="Đặt tiệc" 
                         FontSize="30"
@@ -162,7 +161,7 @@
                                             <ColumnDefinition Width="*"/>
                                         </Grid.ColumnDefinitions>
                                         <TextBlock Text="Tiền đặt cọc" Grid.Column="0" Margin="30 20"/>
-                                        <TextBox Text="{Binding TiecMoi.TienDatCoc}" Grid.Column="1" GotFocus="TextBox_GotFocus" Margin="0 20"/>
+                                        <TextBox Text="{Binding TiecMoi.TienDatCoc, StringFormat=N0}" Grid.Column="1" GotFocus="TextBox_GotFocus" Margin="0 20"/>
                                     </Grid>
 
                                     <Grid Margin="0 5">
@@ -289,7 +288,7 @@
                                                         <TextBlock FontSize="20"
                                                            FontFamily="Cambria"
                                                            Margin="10,2">
-                                                        <Run Text="{Binding TenMonAn}"/>
+                                                        <Run Text="{Binding TenMon}"/>
                                                         </TextBlock>
                                                     </DataTemplate>
                                                 </ItemsControl.ItemTemplate>
