--- a/QuanLyTiecCuoi/MVVM/View/MonAn/ChonMonAn.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/MonAn/ChonMonAn.xaml
@@ -156,7 +156,7 @@
                                  Margin="10,0,0,10"/>
                         </Border>
                         <Button Content="OK" FontSize="20" FontFamily="Cambria" Grid.Row="2" Width="150" Height="50" HorizontalAlignment="Right"
-                                Margin="0,10,0,0" Background="#673500" Foreground="White" BorderBrush="#673500"/>
+                                Margin="0,10,0,0" Background="#673500" Foreground="White" BorderBrush="#673500" Click="Ok_Click"/>
                     </Grid>
                 </Grid>
             </Grid>
